@@ -8,7 +8,7 @@ use Error::Pure qw(err);
 use List::Util 1.33 qw(none);
 use Mo qw(build default is);
 use Mo::utils qw(check_array check_bool check_required);
-use Mo::utils::CSS qw(check_css_class);
+use Mo::utils::CSS 0.02 qw(check_css_class);
 use Readonly;
 
 Readonly::Array our @DATA_TYPES => qw(plain tags);
