@@ -5,7 +5,7 @@ use warnings;
 
 use Mo qw(build is);
 use Mo::utils qw(check_bool check_number);
-use Mo::utils::CSS qw(check_css_class);
+use Mo::utils::CSS 0.02 qw(check_css_class);
 
 our $VERSION = 0.16;
 
