@@ -29,7 +29,7 @@ requires:
   List::Util: 1.33
   Mo: 0
   Mo::utils: 0.14
-  Mo::utils::CSS: 0
+  Mo::utils::CSS: 0.02
   Readonly: 0
   Scalar::Util: 0
   perl: 5.8.0
