@@ -22,7 +22,7 @@ requires 'Error::Pure' => 0;
 requires 'List::Util' => 1.33;
 requires 'Mo' => 0;
 requires 'Mo::utils' => 0.15;
-requires 'Mo::utils::CSS' => 0;
+requires 'Mo::utils::CSS' => 0.02;
 requires 'Readonly' => 0;
 requires 'Scalar::Util' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Data-HTML-Element/issues';
