@@ -1,5 +1,6 @@
 0.16
  - Add option.pl example.
+ - Fix minimal version of Mo::utils::CSS.
 
 0.15 2024-04-24T11:39:18+02:00
  - Add doc for Option.
